Parser > add onCallbackBoolean() method in interface and classes which implement it